crates/testing/compiletest-integration/tests/ui/struct-field-missing.stderr
error: missing field `y` in struct initialization
 --> tests/ui/struct-field-missing.rs:7:13
  |
7 |     let p = Point { x: 10 };
  |             ^^^^^^^^^^^^^^^ missing `y`
